<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="map_remember_position"
        android:summary="@string/pref_description_remember_position"
        android:title="@string/pref_title_remember_position" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_index_path"
        android:inputType="textUri"
        android:key="map_index_path"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_index_path" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_list_mapcss_theme_titles"
        android:entryValues="@array/pref_list_mapcss_theme_values"
        android:key="map_mapcss_theme"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_mapcss_theme" />

</PreferenceScreen>
